--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,8 @@ body {
 
 nav {
   padding: 10px;
-  background-color: #222;
-  color: white;
+  background-color: #f5f5f5;
+  color: #333;
 }
 
 nav ul {
