--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,7 @@ section {
   padding: 2rem;
 }
 
-h1,
-h2,
-h3,
-p {
+h1, h2, h3, p, ul, li {
   text-align: center;
   color: #111;
 }
@@ -44,4 +41,9 @@ ul {
 
 li {
   margin-bottom: 0.5rem;
+}
+
+img, iframe {
+  display: block;
+  margin: 0 auto;
 }
