--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,13 @@
 body {
   background: linear-gradient(to right, orange, red);
-  font-family: sans-serif;
+  font-family: monospace;
 }
 
 nav {
   padding: 10px;
   background-color: #F7BEC0;
   color: #333;
+  font-family: monospace;
 }
 
 nav ul {
