--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ nav {
   background-color: #F7BEC0;
   color: #333;
   font-family: monospace;
+  text-align: center;
 }
 
 nav ul {
@@ -32,7 +33,6 @@ h1, h2, h3, p, ul, li, ol, dt, dt, dd {
 
 a {
   color: #333;
-  text-decoration: underline;
 }
 
 ul {
@@ -51,6 +51,17 @@ ol li {
 img, iframe {
   display: block;
   margin: 0 auto;
+  border-radius: 8px;
+}
+
+img {
+  width: 300px;
+  height: 300px;
+}
+
+iframe {
+  width: 700px;
+  height: 500px;
 }
 
 .fragrenceNote {
