--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,16 @@ body {
 }
 
 nav {
-  padding: 10px;
   background-color: #F7BEC0;
   color: #333;
   font-family: monospace;
+  padding: 15px;
   text-align: center;
 }
 
 nav a {
+  padding: 14px 20px;
   text-align: center;
-  display: flex;
-  flex-direction: row;
 }
 
 section {
