--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,9 @@ nav a {
 
 section {
   background-color: #F5F5DC;
-  padding: 2rem;
+  padding: 20px;
+  max-width: 800px;
+  margin: 20px auto;
 }
 
 h1, h2, h3, p, ul, li, ol, dt, dt, dd {
