--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,17 @@ nav {
   padding: 15px;
 }
 
-nav ul, li {
-  text-align: center;
-  margin: 0 auto;
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
   display: flex;
+  justify-content: space-between;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 10px;
 }
 
 section {
