--- a/css/styles.css
+++ b/css/styles.css
@@ -8,15 +8,17 @@ nav {
   color: #333;
   font-family: monospace;
   padding: 15px;
+  text-align: center;
 }
 
 nav ul {
   list-style: none;
+  text-align: center;
 }
 
 nav li {
   display: inline;
-  margin: 0 20px;
+  text-align: center;
 }
 
 section {
