--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   background: linear-gradient(to right, orange, red);
   font-family: monospace;
+  font-size: 24px; 
 }
 
 nav {
@@ -8,32 +9,38 @@ nav {
   color: #333;
   font-family: monospace;
   padding: 15px;
+  position: fixed; 
+  top: 0;
+  width: 100%; 
 }
 
 nav ul {
   list-style: none;
+  text-align: center; 
 }
 
 nav li {
-  display: inline;
+  display: inline-block; 
   margin: 0 20px;
 }
 
 section {
   background-color: #F5F5DC;
   padding: 22px;
-  max-width: 950px;
-  margin: 20px auto;
+  max-width: 950px; 
+  margin: 20px auto; 
   border-radius: 8px;
 }
 
-h1, h2, h3, p, ul, li, ol, dt, dt, dd {
+h1, h2, h3, p, ul, li, ol, dt, dd {
   text-align: center;
   color: #111;
+  font-size: 1rem; 
 }
 
 a {
   color: #333;
+  text-decoration: none; 
 }
 
 ul {
@@ -42,7 +49,7 @@ ul {
 }
 
 li {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem; 
 }
 
 ol li {
