--- a/css/styles.css
+++ b/css/styles.css
@@ -167,3 +167,17 @@ iframe {
 .sideBySide {
   display: flex;
 }
+
+#map{
+ width: 80%;
+ height: 500px;
+ border-radius: 25px;
+ border-color: #FE5F55;
+ border-width: thick;
+ border-style: dotted;
+ margin: 20px;
+ margin-top: 200px;
+ max-width: 100%;
+ margin-left: auto;
+ margin-right: auto;
+}
